...
    }
    
    func initCarbonNavigation() {
        
        let tabs: [AnyObject] = [
            UIImage(named:"estabelecimento")!,
            UIImage(named:"favoritos")!,
            UIImage(named:"sobre")!
        ]
        
        self.carbonTabSwipeNavigation = CarbonTabSwipeNavigation(items: tabs, delegate: self)
        self.carbonTabSwipeNavigation.insertIntoRootViewController(self, andTargetView: self.centerView)
        self.carbonTabSwipeNavigation.setIndicatorColor(UIColor(netHex: ColorPicker.sharedInstance.getColor()))
        self.carbonTabSwipeNavigation.setSelectedColor(UIColor(netHex: ColorPicker.sharedInstance.getColor()))
...
