//
//  BelDelUITests.swift
//  BelDelUITests
//
//  Created by Rodrigo Cavalcante on 9/20/16.
//  Copyright © 2016 Rodrigo Cavalcante. All rights reserved.
//

import XCTest

class BelDelUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let tablesQuery = app.tables
        
        sleep(_:5)
        
        snapshot("0-company")
        tablesQuery.cells.containing(.staticText, identifier:"A Forneria").staticTexts["Pizzaria"].tap()
        
        snapshot("1-establishment")

        tablesQuery.element(boundBy: tablesQuery.count - 1).tap()
        snapshot("2-add-to-favorite")
        
        let segmentedControlsQuery = app.toolbars.segmentedControls
        segmentedControlsQuery.buttons["favoritos"].tap()
        
        snapshot("3-favorite")
        
        segmentedControlsQuery.buttons["sobre"].tap()
        
        snapshot("4-about")
    }
    
}
